# video-encoder-decoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_libav_ubuntu_2004.sh  main.cpp  main.cpp.rtsp  merge_mp4s.sh  packet_reader.h  queue.h
itvsl/: CMakeLists.txt  itvsl.cpp  itvsl.h  itvsl_archive.cpp  itvsl_archive.h  itvsl_queue.h  itvslprotocol.pb.cc  itvslprotocol.pb.h  mp4_file_cleanup.cpp  mp4_file_cleanup.h  video_log.cpp  video_log.h
itvsl/proto/: CMakeLists.txt  itvslprotocol.pb.h  itvslprotocol.proto
